Bug 438657 - Cannot resize columns in printer queue
Summary: Cannot resize columns in printer queue
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_printer_manager (other bugs)
Version First Reported In: 5.27.5
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Daniel Nicoletti
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2021-06-15 00:17 UTC by David
Modified: 2025-01-02 22:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3
Sentry Crash Report:


Attachments
unresizable_columns (46.56 KB, image/png)
2021-06-15 00:17 UTC, David
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David 2021-06-15 00:17:50 UTC
Created attachment 139326 [details]
unresizable_columns

SUMMARY
When I check the printing queue, the columns in there are not resizable, so it's not possible to see the names of the files that are to be printed for example.

STEPS TO REPRODUCE
1. Send many documents to a printer.
2. Open the printing queue from the system tray.
3. Try to resize some column such as the names.

OBSERVED RESULT
Columns are not resizable, thus under the default sizes, it's extremely unlikely that the names would be readable, among other things.

EXPECTED RESULT
Should let me resize the columns with the mouse.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.20.5
KDE Frameworks Version: 5.78.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2025-01-02 21:41:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/print-manager/-/merge_requests/208
Comment 2 Mike 2025-01-02 22:17:49 UTC
Git commit 8756b9f72c71cd5fb35f05b96395aab74232d14b by Mike Noe.
Committed on 02/01/2025 at 21:56.
Pushed by noee into branch 'master'.

printqueue: Remove section auto-sizing settings on header
FIXED-IN: 6.3

M  +2    -10   src/printqueue/PrintQueueUi.cpp

https://invent.kde.org/plasma/print-manager/-/commit/8756b9f72c71cd5fb35f05b96395aab74232d14b