printqueue: Remove section auto-sizing settings on header

BUG: 438657
FIXED-IN: 6.3